# netgear-hack

./: .gitignore  README.md  netgear_block.py  netgear_client.py  pyproject.toml  repository.yaml  router_profile.example.json
netgear-hack-addon/: CHANGELOG.md  DOCS.md  Dockerfile  app.py  config.yaml  netgear_client.py  run.sh
netgear-hack-addon/netgear_hack/: router.py
netgear-hack-addon/translations/: en.yaml
netgear_hack/: __init__.py  router.py
scripts/: sync_addon_package.sh
tests/: test_netgear.py
